--- a/src/assets/custom-2.css
+++ b/src/assets/custom-2.css
@@ -120,7 +120,15 @@
 .td-c.td-logo-c {
   position: relative;
 }
+.site{
+margin: -1rem 0 !important;
+}
+.site-content{
+  background:#291C41 ;
+  min-height: 100vh;
+  max-height: 100%;
 
+}
 td.td-logo {}
 
 .ribbon-1:after {
