Some change pages

--- a/src/assets/custom-2.css
+++ b/src/assets/custom-2.css
@@ -127,6 +127,7 @@ margin: -1rem 0 !important;
   background:#291C41 ;
   min-height: 100vh;
   max-height: 100%;
+  padding: 20px;
 
 }
 td.td-logo {}
